fix line spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,3 @@
-
-
  #bg {
 
   position: fixed;
@@ -57,6 +55,6 @@
 
 .lines {
   position: absolute;
-  top: 47%;
+  top: 30%;
   left: 28%;
 }
